# screen_capture_lite

./: CMakeLists.txt
src_cpp/: CMakeLists.txt
